[gd_scene load_steps=30 format=3 uid="uid://6ugc0tg5jb2e"]

[ext_resource type="Script" path="res://Entities/SmallEnemy/SmallEnemy.gd" id="1_5hhm5"]
[ext_resource type="PackedScene" uid="uid://dekxuqddee516" path="res://Entities/SmallEnemy/laser_raycast.tscn" id="13_3dlbd"]
[ext_resource type="AudioStream" uid="uid://d2vvf44p47efx" path="res://SFX/SFX_laserspike.mp3" id="23_5jktk"]
[ext_resource type="Texture2D" uid="uid://c3nid5d5ux6d6" path="res://Sprites/Characters/Small_enemy_windup/Small_enemy_windup_Full1.png" id="23_7cux6"]
[ext_resource type="Texture2D" uid="uid://dp52pskxrpb6q" path="res://Sprites/Characters/Small_enemy_windup/Small_enemy_windup_Full2.png" id="24_e3p0h"]
[ext_resource type="Texture2D" uid="uid://b3mlro3rykws5" path="res://Sprites/Characters/Small_enemy_windup/Small_enemy_windup_Full3.png" id="25_yoypl"]
[ext_resource type="Texture2D" uid="uid://btw4lxp87hhjd" path="res://Sprites/Characters/Small_enemy_windup/Small_enemy_windup_Full4.png" id="26_shnl1"]
[ext_resource type="Texture2D" uid="uid://30wraqqyhm6i" path="res://Sprites/Characters/Small_enemy_windup/Small_enemy_windup_Full5.png" id="27_s1v6m"]
[ext_resource type="Texture2D" uid="uid://vd65dnkbio04" path="res://Sprites/Characters/Small_enemy_windup/Small_enemy_windup_Full6.png" id="28_du1bu"]
[ext_resource type="Texture2D" uid="uid://b6yr7017t0lo" path="res://Sprites/Characters/Small_enemy_windup/Small_enemy_windup_Full7.png" id="29_52jf0"]
[ext_resource type="Texture2D" uid="uid://1ibtsf13ulsp" path="res://Sprites/Characters/Small_enemy_windup/Small_enemy_windup_Full8.png" id="30_ixiby"]
[ext_resource type="Texture2D" uid="uid://b077mqmhc24o1" path="res://Sprites/Characters/Small_enemy_windup/Small_enemy_windup_Full9.png" id="31_l014g"]
[ext_resource type="Script" path="res://Entities/SmallEnemy/ChargeAttack.gd" id="31_s11go"]
[ext_resource type="Texture2D" uid="uid://0y12immftys7" path="res://Sprites/Characters/Small_enemy_windup/Small_enemy_windup_Full10.png" id="32_dmuhc"]
[ext_resource type="Texture2D" uid="uid://if5nb24xjtc3" path="res://Sprites/Characters/Small_enemy_windup/Small_enemy_windup_Full11.png" id="33_kqv4c"]
[ext_resource type="Texture2D" uid="uid://cf2phi4hu4w6i" path="res://Sprites/Characters/Small_enemy_windup/Small_enemy_windup_Full12.png" id="34_jkdgx"]
[ext_resource type="Texture2D" uid="uid://8us5xqtbuj10" path="res://Sprites/Characters/Small_enemy_windup/Small_enemy_windup_Full13.png" id="35_24hxf"]
[ext_resource type="Texture2D" uid="uid://dibt1la16shuf" path="res://Sprites/Characters/Small_enemy_windup/Small_enemy_windup_Full14.png" id="36_kvqvm"]
[ext_resource type="Script" path="res://Engine/TimedAnimation.gd" id="39_7b776"]

[sub_resource type="Animation" id="Animation_2uktc"]
length = 0.001

[sub_resource type="Animation" id="Animation_fh50i"]
resource_name = "fire"
length = 0.416675
step = 0.0625
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0625, 0.3125),
"transitions": PackedFloat32Array(0.4, 1),
"update": 0,
"values": [10, 14]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Attack/Sound")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.165,
"stream": ExtResource("23_5jktk")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Attack")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0625),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"fire"
}]
}

[sub_resource type="Animation" id="Animation_todoi"]
resource_name = "idle"
length = 0.10001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_qck5o"]
resource_name = "loop_charging"
length = 0.500008
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [6, 10]
}

[sub_resource type="Animation" id="Animation_sqhs7"]
resource_name = "open"
length = 0.416675
step = 0.0625
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.416667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_63kj5"]
_data = {
"RESET": SubResource("Animation_2uktc"),
"fire": SubResource("Animation_fh50i"),
"idle": SubResource("Animation_todoi"),
"loop_charging": SubResource("Animation_qck5o"),
"open": SubResource("Animation_sqhs7")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_eenpm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("23_7cux6")
}, {
"duration": 1.0,
"texture": ExtResource("24_e3p0h")
}, {
"duration": 1.0,
"texture": ExtResource("25_yoypl")
}, {
"duration": 1.0,
"texture": ExtResource("26_shnl1")
}, {
"duration": 1.0,
"texture": ExtResource("27_s1v6m")
}, {
"duration": 1.0,
"texture": ExtResource("28_du1bu")
}, {
"duration": 1.0,
"texture": ExtResource("29_52jf0")
}, {
"duration": 1.0,
"texture": ExtResource("30_ixiby")
}, {
"duration": 1.0,
"texture": ExtResource("31_l014g")
}, {
"duration": 1.0,
"texture": ExtResource("32_dmuhc")
}, {
"duration": 1.0,
"texture": ExtResource("33_kqv4c")
}, {
"duration": 1.0,
"texture": ExtResource("34_jkdgx")
}, {
"duration": 1.0,
"texture": ExtResource("35_24hxf")
}, {
"duration": 1.0,
"texture": ExtResource("36_kvqvm")
}, {
"duration": 1.0,
"texture": ExtResource("23_7cux6")
}],
"loop": false,
"name": &"full",
"speed": 12.0
}]

[sub_resource type="Animation" id="Animation_5kkds"]
resource_name = "pulse"
loop_mode = 1
step = 0.25
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [],
"method": &"fire_attack"
}, {
"args": [5],
"method": &"step"
}, {
"args": [],
"method": &"charge_attack"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Attack/LaserRaycast")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.875),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"stop_tracking"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lidq3"]
_data = {
"pulse": SubResource("Animation_5kkds")
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_6prsd"]
height = 1.76

[node name="SmallEnemy" type="CharacterBody3D"]
collision_layer = 4
motion_mode = 1
script = ExtResource("1_5hhm5")
max_health = 3.0

[node name="Attack" type="Node3D" parent="."]
script = ExtResource("31_s11go")

[node name="Sound" type="AudioStreamPlayer3D" parent="Attack"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 21, 0)

[node name="LaserRaycast" parent="Attack" instance=ExtResource("13_3dlbd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0995958, 0.867847, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_63kj5")
}
autoplay = "idle"

[node name="AnimatedSprite" type="AnimatedSprite3D" parent="."]
transform = Transform3D(2.5, 0, 0, 0, 2.5, 0, 0, 0, 2.5, 0, 0.706565, 0)
billboard = 2
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_eenpm")
animation = &"full"

[node name="TimedAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lidq3")
}
script = ExtResource("39_7b776")
animation = "pulse"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.920104, 0)
shape = SubResource("CapsuleShape3D_6prsd")

[connection signal="attack_hit" from="Attack" to="." method="_on_attack_attack_hit"]
